@@ -1107,6 +1107,32 @@ public interface RequestSpecification extends RequestSender {
     RequestSpecification contentType(String contentType);
 
     /**
+     * Specify the accept header of the request. This just a shortcut for:
+     * <pre>
+     * header("Accept", contentType);
+     * </pre>
+     *
+     * @param contentType The content type whose accept header {@link com.jayway.restassured.http.ContentType#getAcceptHeader()} will be used as Accept header in the request.
+     * @return The request specification
+     * @see ContentType
+     * @see #header(String, Object, Object...)
+     */
+    RequestSpecification accept(ContentType contentType);
+
+    /**
+     * Specify the accept header of the request. This just a shortcut for:
+     * <pre>
+     * header("Accept", contentType);
+     * </pre>
+     *
+     * @param mediaTypes The media type(s) that will be used as Accept header in the request.
+     * @return The request specification
+     * @see ContentType
+     * @see #header(String, Object, Object...)
+     */
+    RequestSpecification accept(String mediaTypes);
+
+    /**
      * Specify a multi-part specification. Use this method if you need to specify content-type etc.
      *
      * @param multiPartSpecification Multipart specification
